--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
               <br />
               <em class="title">Sunset</em> <span class="result">21:16</span>
             </p>
+            <span id="github-link"
+              ><a href="https://github.com/JensenECampbell/my-weather-app"
+                >Open-source code</a
+              >
+              by Jensen Campbell</span
+            >
           </div>
           <div class="future-weather col-sm-3">
             <form id="search-engine">
